--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,13 +30,13 @@ set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 include(FindPackageHandleStandardArgs)
 
 # Set search paths
-string(REPLACE ":" ";" LIBRARY_DIRS $ENV{LD_LIBRARY_PATH})
+string(REPLACE ":" ";" LIBRARY_DIRS "$ENV{LD_LIBRARY_PATH}")
 list(APPEND CMAKE_LIBRARY_PATH ${LIBRARY_DIRS})
 
-string(REPLACE ":" ";" INCLUDE_DIRS $ENV{C_INCLUDE_PATH})
+string(REPLACE ":" ";" INCLUDE_DIRS "$ENV{C_INCLUDE_PATH}")
 list(APPEND CMAKE_INCLUDE_PATH ${INCLUDE_DIRS})
 
-string(REPLACE ":" ";" INCLUDE_DIRS $ENV{CPLUS_INCLUDE_PATH})
+string(REPLACE ":" ";" INCLUDE_DIRS "$ENV{CPLUS_INCLUDE_PATH}")
 list(APPEND CMAKE_INCLUDE_PATH ${INCLUDE_DIRS})
 
 
