Refined precision in weak scaling decks.

--- a/input/weak_scale_sod_eul/sod_eul_1.yaml
+++ b/input/weak_scale_sod_eul/sod_eul_1.yaml
@@ -18,10 +18,10 @@ MESH:
     - type: LIN1
       dims: [663, 166]
       sides:
-          - - { type: LINE, bc: SLIPY, pos: [0.0, 0.0, 8.839, 0.0] }
-          - - { type: LINE, bc: SLIPX, pos: [8.839, 0.0, 8.839, 2.210] }
-          - - { type: LINE, bc: SLIPY, pos: [8.839, 2.210, 0.0, 2.210] }
-          - - { type: LINE, bc: SLIPX, pos: [0.0, 2.210, 0.0, 0.0] }
+          - - { type: LINE, bc: SLIPY, pos: [0.0, 0.0, 8.838834764831843, 0.0] }
+          - - { type: LINE, bc: SLIPX, pos: [8.838834764831843, 0.0, 8.838834764831843, 2.2097086912079607] }
+          - - { type: LINE, bc: SLIPY, pos: [8.838834764831843, 2.2097086912079607, 0.0, 2.2097086912079607] }
+          - - { type: LINE, bc: SLIPX, pos: [0.0, 2.2097086912079607, 0.0, 0.0] }
 
 ALE:
     zeul: true
@@ -39,4 +39,4 @@ INITIAL_CONDITIONS:
         - { type: region, value: 1, density: 0.125, energy: 2.0 }
 
 SHAPES:
-    - { type: rectangle, params: [4.419, -10.0, 13.258, 12.210] }
+    - { type: rectangle, params: [4.419417382415921, -10.0, 13.258252147247763, 12.209708691207961] }
