--- a/input/weak_scale_sod_eul/sod_eul_1.yaml
+++ b/input/weak_scale_sod_eul/sod_eul_1.yaml
@@ -15,13 +15,13 @@ EOS:
     - { type: ideal gas, params: [1.4] }
 
 MESH:
-    - type: LIN1
-      dims: [663, 166]
-      sides:
-          - - { type: LINE, bc: SLIPY, pos: [0.0, 0.0, 8.84, 0.0] }
-          - - { type: LINE, bc: SLIPX, pos: [8.84, 0.0, 8.84, 2.2133333333333334] }
-          - - { type: LINE, bc: SLIPY, pos: [8.84, 2.2133333333333334, 0.0, 2.2133333333333334] }
-          - - { type: LINE, bc: SLIPX, pos: [0.0, 2.2133333333333334, 0.0, 0.0] }
+    type: LIN1
+    dims: [663, 166]
+    sides:
+        - - { type: LINE, bc: SLIPY, pos: [0.0, 0.0, 8.84, 0.0] }
+        - - { type: LINE, bc: SLIPX, pos: [8.84, 0.0, 8.84, 2.2133333333333334] }
+        - - { type: LINE, bc: SLIPY, pos: [8.84, 2.2133333333333334, 0.0, 2.2133333333333334] }
+        - - { type: LINE, bc: SLIPX, pos: [0.0, 2.2133333333333334, 0.0, 0.0] }
 
 ALE:
     zeul: true
