--- a/input/weak_scale_sod_eul/sod_eul_2.yaml
+++ b/input/weak_scale_sod_eul/sod_eul_2.yaml
@@ -15,13 +15,13 @@ EOS:
     - { type: ideal gas, params: [1.4] }
 
 MESH:
-    - type: LIN1
-      dims: [938, 234]
-      sides:
-          - - { type: LINE, bc: SLIPY, pos: [0.0, 0.0, 12.506666666666668, 0.0] }
-          - - { type: LINE, bc: SLIPX, pos: [12.506666666666668, 0.0, 12.506666666666668, 3.12] }
-          - - { type: LINE, bc: SLIPY, pos: [12.506666666666668, 3.12, 0.0, 3.12] }
-          - - { type: LINE, bc: SLIPX, pos: [0.0, 3.12, 0.0, 0.0] }
+    type: LIN1
+    dims: [938, 234]
+    sides:
+        - - { type: LINE, bc: SLIPY, pos: [0.0, 0.0, 12.506666666666668, 0.0] }
+        - - { type: LINE, bc: SLIPX, pos: [12.506666666666668, 0.0, 12.506666666666668, 3.12] }
+        - - { type: LINE, bc: SLIPY, pos: [12.506666666666668, 3.12, 0.0, 3.12] }
+        - - { type: LINE, bc: SLIPX, pos: [0.0, 3.12, 0.0, 0.0] }
 
 ALE:
     zeul: true
