--- a/input/weak_scale_sod_eul/sod_eul_64.yaml
+++ b/input/weak_scale_sod_eul/sod_eul_64.yaml
@@ -15,13 +15,13 @@ EOS:
     - { type: ideal gas, params: [1.4] }
 
 MESH:
-    - type: LIN1
-      dims: [5303, 1326]
-      sides:
-          - - { type: LINE, bc: SLIPY, pos: [0.0, 0.0, 70.70666666666666, 0.0] }
-          - - { type: LINE, bc: SLIPX, pos: [70.70666666666666, 0.0, 70.70666666666666, 17.68] }
-          - - { type: LINE, bc: SLIPY, pos: [70.70666666666666, 17.68, 0.0, 17.68] }
-          - - { type: LINE, bc: SLIPX, pos: [0.0, 17.68, 0.0, 0.0] }
+    type: LIN1
+    dims: [5303, 1326]
+    sides:
+        - - { type: LINE, bc: SLIPY, pos: [0.0, 0.0, 70.70666666666666, 0.0] }
+        - - { type: LINE, bc: SLIPX, pos: [70.70666666666666, 0.0, 70.70666666666666, 17.68] }
+        - - { type: LINE, bc: SLIPY, pos: [70.70666666666666, 17.68, 0.0, 17.68] }
+        - - { type: LINE, bc: SLIPX, pos: [0.0, 17.68, 0.0, 0.0] }
 
 ALE:
     zeul: true
